--- a/index.html
+++ b/index.html
@@ -199,6 +199,9 @@
       <div class="dot"></div>
       <div class="dot"></div>
       <div class="dot"></div>
+      <div class="dot"></div>
+      <div class="dot"></div>
+</div>
     </div>
 
     <div class="keypad">
