--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 <body>
 
   <div class="screen" id="screen">
-    <div class="title">Nhập mật khẩu</div>
+    <div class="title">Một ngày đáng nhớ</div>
 
     <div class="dots" id="dots">
       <div class="dot"></div>
