--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     }
 
     .title {
-      font-size: 20px;
+      font-size: 22px;
       font-weight: 600;
-      color: #ffb6d9;
+      color: #ffd1e8;
       margin-bottom: 18px;
       letter-spacing: 0.2px;
     }
