--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Một ngày đáng nhớ</title>
+  <title>Ngày ta chung đôi</title>
 
-  <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-
-  <!-- Icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
   <style>
@@ -28,7 +25,6 @@
       color: white;
     }
 
-    /* ánh sáng nền */
     body::before {
       content: "";
       position: absolute;
@@ -51,10 +47,9 @@
       right: -200px;
     }
 
-    /* khung */
     .screen {
       position: relative;
-      width: 320px;
+      width: 340px;
       padding: 28px 22px;
       border-radius: 26px;
       background: rgba(35, 10, 45, 0.75);
@@ -65,14 +60,23 @@
     }
 
     .title {
-      font-size: 22px;
-      font-weight: 600;
-      color: #ffd1e8;
+      font-size: 18px;
+      font-weight: 700;
+      color: #ffb6d9;
       margin-bottom: 18px;
       letter-spacing: 0.2px;
     }
 
-    /* chấm mật khẩu */
+    /* ====== Step hide/show ====== */
+    .step {
+      display: none;
+    }
+
+    .step.active {
+      display: block;
+    }
+
+    /* ====== Password Dots ====== */
     .dots {
       display: flex;
       justify-content: center;
@@ -94,7 +98,7 @@
       box-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
     }
 
-    /* bàn phím số */
+    /* ====== Keypad ====== */
     .keypad {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -140,7 +144,7 @@
       font-size: 18px;
     }
 
-    /* thông báo */
+    /* ====== Message ====== */
     .message {
       margin-top: 18px;
       min-height: 20px;
@@ -149,7 +153,6 @@
       opacity: 0.9;
     }
 
-    /* rung khi sai */
     .shake {
       animation: shake 0.35s;
     }
@@ -163,7 +166,6 @@
       100% { transform: translateX(0); }
     }
 
-    /* loading vòng tròn */
     .loading {
       display: inline-block;
       width: 16px;
@@ -180,11 +182,78 @@
       to { transform: rotate(360deg); }
     }
 
-    /* footer nhỏ */
     .footer {
       margin-top: 14px;
       font-size: 11px;
       opacity: 0.55;
+    }
+
+    /* ====== QUIZ ====== */
+    .quiz-box {
+      text-align: left;
+      margin-top: 10px;
+    }
+
+    .question {
+      font-size: 14px;
+      font-weight: 600;
+      margin-bottom: 12px;
+      color: rgba(255, 255, 255, 0.95);
+    }
+
+    .answers {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .answer-btn {
+      width: 100%;
+      padding: 12px;
+      border-radius: 14px;
+      border: 1px solid rgba(255,255,255,0.12);
+      background: rgba(255,255,255,0.06);
+      color: rgba(255,255,255,0.92);
+      cursor: pointer;
+      font-size: 14px;
+      font-weight: 500;
+      transition: 0.15s;
+      text-align: center;
+    }
+
+    .answer-btn:hover {
+      background: rgba(255,255,255,0.14);
+      transform: scale(1.01);
+    }
+
+    .answer-btn.correct {
+      background: rgba(120, 255, 180, 0.2);
+      border-color: rgba(120, 255, 180, 0.4);
+    }
+
+    .answer-btn.wrong {
+      background: rgba(255, 90, 90, 0.2);
+      border-color: rgba(255, 90, 90, 0.4);
+    }
+
+    .next-btn {
+      margin-top: 14px;
+      width: 100%;
+      height: 50px;
+      border: none;
+      border-radius: 14px;
+      cursor: pointer;
+      font-weight: 700;
+      font-size: 14px;
+      background: rgba(255, 182, 217, 0.22);
+      color: #ffb6d9;
+      transition: 0.2s;
+      display: none;
+    }
+
+    .next-btn:hover {
+      background: rgba(255, 182, 217, 0.35);
+      transform: scale(1.02);
     }
   </style>
 </head>
@@ -192,63 +261,111 @@
 <body>
 
   <div class="screen" id="screen">
-    <div class="title">Một ngày đáng nhớ</div>
 
-    <div class="dots" id="dots">
-      <div class="dot"></div>
-      <div class="dot"></div>
-      <div class="dot"></div>
-      <div class="dot"></div>
+    <!-- ================= STEP 1: PASSWORD ================= -->
+    <div class="step active" id="stepPassword">
+      <div class="title">Ngày ta chung đôi</div>
+
+      <div class="dots" id="dots">
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+      </div>
+
+      <div class="keypad">
+        <button class="btn" onclick="press('1')">1</button>
+        <button class="btn" onclick="press('2')">2</button>
+        <button class="btn" onclick="press('3')">3</button>
+
+        <button class="btn" onclick="press('4')">4</button>
+        <button class="btn" onclick="press('5')">5</button>
+        <button class="btn" onclick="press('6')">6</button>
+
+        <button class="btn" onclick="press('7')">7</button>
+        <button class="btn" onclick="press('8')">8</button>
+        <button class="btn" onclick="press('9')">9</button>
+
+        <button class="btn empty"></button>
+
+        <button class="btn" onclick="press('0')">0</button>
+
+        <button class="btn delete" onclick="del()">
+          <i class="fa-solid fa-delete-left"></i>
+        </button>
+      </div>
+
+      <div class="message" id="msg"></div>
+      <div class="footer">📅 Ngày tạo: 05/02/2026</div>
     </div>
 
-    <div class="keypad">
-      <button class="btn" onclick="press('1')">1</button>
-      <button class="btn" onclick="press('2')">2</button>
-      <button class="btn" onclick="press('3')">3</button>
+    <!-- ================= STEP 2: QUIZ ================= -->
+    <div class="step" id="stepQuiz">
+      <div class="title">Mini Quiz 💜</div>
 
-      <button class="btn" onclick="press('4')">4</button>
-      <button class="btn" onclick="press('5')">5</button>
-      <button class="btn" onclick="press('6')">6</button>
+      <div class="quiz-box">
+        <div class="question" id="questionText"></div>
+        <div class="answers" id="answersBox"></div>
 
-      <button class="btn" onclick="press('7')">7</button>
-      <button class="btn" onclick="press('8')">8</button>
-      <button class="btn" onclick="press('9')">9</button>
+        <button class="next-btn" id="nextBtn" onclick="nextQuestion()">
+          Tiếp tục ➜
+        </button>
 
-      <!-- nút trống giống hình -->
-      <button class="btn empty"></button>
+        <div class="message" id="quizMsg"></div>
+      </div>
 
-      <button class="btn" onclick="press('0')">0</button>
-
-      <!-- nút xoá -->
-      <button class="btn delete" onclick="del()">
-        <i class="fa-solid fa-delete-left"></i>
-      </button>
+      <div class="footer">Trả lời đúng để mở khoá 💕</div>
     </div>
 
-    <div class="message" id="msg"></div>
-    <div class="footer">Gợi ý: Ngày kỷ niệm</div>
+    <!-- ================= STEP 3: FINISH ================= -->
+    <div class="step" id="stepFinish">
+      <div class="title">Hoàn thành rồi 💜</div>
+      <div class="message" style="color:#7CFFB3; font-size:14px;">
+        Đang chuyển đến món quà dành cho bạn...
+        <span class="loading"></span>
+      </div>
+      <div class="footer">Chờ một chút nha 😍</div>
+    </div>
+
   </div>
 
   <script>
     // ==============================
-    // 🔥 CẤU HÌNH
+    // CONFIG
     // ==============================
 
-    // Mật khẩu đúng (bạn thay đổi tuỳ ý)
-    const correctPassword = "1710";
+    const correctPassword = "1234";
 
-    // Link chuyển sang web HeartBeat bạn gửi
     const redirectURL =
       "https://panbap.github.io/HeartBeat/lovequiz.html?id=eyJsIjoiIiwibSI6IiIsIm4iOiJCw6J5IGJpIMahaSBhbmggY8OzIMSRaeG7gXUgbXXhu5FuIG7Ds2kgLi4uLi4iLCJvIjoiQW5oIHRoxrDGoW5nIGLDqSBuaGnhu4F1IGzhuq9tIiwiZyI6IkThuqEgYsOpIG3Dum4gbmdoZSEiLCJoIjoiTmdoZSBz4bq9IGPDsyBxdcOgISJ9";
 
+    // Quiz data (bạn sửa câu hỏi ở đây)
+    const quizData = [
+      {
+        question: "1) Ngày chúng mình chính thức bắt đầu là ngày nào?",
+        answers: ["05/02", "14/02", "20/10", "01/01"],
+        correct: 0
+      },
+      {
+        question: "2) Người yêu của bạn đáng yêu không?",
+        answers: ["Không hề", "Bình thường", "Dễ thương vừa", "Dễ thương nhất thế giới 💜"],
+        correct: 3
+      },
+      {
+        question: "3) Khi buồn thì người đó cần gì nhất?",
+        answers: ["Một cái ôm", "Một ly trà sữa", "Một lời quan tâm", "Tất cả đều đúng"],
+        correct: 3
+      }
+    ];
+
     // ==============================
-    // LOGIC
+    // PASSWORD LOGIC
     // ==============================
 
     let input = "";
 
     function updateDots() {
-      const dots = document.querySelectorAll(".dot");
+      const dots = document.querySelectorAll("#stepPassword .dot");
       dots.forEach((dot, index) => {
         if (index < input.length) dot.classList.add("filled");
         else dot.classList.remove("filled");
@@ -286,8 +403,9 @@
         msg.innerHTML = "Đúng mật khẩu... <span class='loading'></span>";
 
         setTimeout(() => {
-          window.location.href = redirectURL;
-        }, 1200);
+          showStep("stepQuiz");
+          startQuiz();
+        }, 900);
 
       } else {
         msg.style.color = "#ff6b6b";
@@ -304,11 +422,105 @@
     }
 
     // ==============================
-    // Hỗ trợ nhập bằng bàn phím máy tính
+    // STEP CONTROL
     // ==============================
+
+    function showStep(stepId) {
+      document.querySelectorAll(".step").forEach(step => step.classList.remove("active"));
+      document.getElementById(stepId).classList.add("active");
+    }
+
+    // ==============================
+    // QUIZ LOGIC
+    // ==============================
+
+    let currentQuestion = 0;
+    let selected = false;
+
+    function startQuiz() {
+      currentQuestion = 0;
+      loadQuestion();
+    }
+
+    function loadQuestion() {
+      selected = false;
+      document.getElementById("quizMsg").innerText = "";
+      document.getElementById("nextBtn").style.display = "none";
+
+      const q = quizData[currentQuestion];
+      document.getElementById("questionText").innerText = q.question;
+
+      const answersBox = document.getElementById("answersBox");
+      answersBox.innerHTML = "";
+
+      q.answers.forEach((ans, index) => {
+        const btn = document.createElement("button");
+        btn.className = "answer-btn";
+        btn.innerText = ans;
+
+        btn.onclick = () => chooseAnswer(index, btn);
+
+        answersBox.appendChild(btn);
+      });
+    }
+
+    function chooseAnswer(index, btn) {
+      if (selected) return;
+      selected = true;
+
+      const q = quizData[currentQuestion];
+      const allBtns = document.querySelectorAll(".answer-btn");
+
+      if (index === q.correct) {
+        btn.classList.add("correct");
+        document.getElementById("quizMsg").style.color = "#7CFFB3";
+        document.getElementById("quizMsg").innerText = "Đúng rồi 💜";
+
+        document.getElementById("nextBtn").style.display = "block";
+
+      } else {
+        btn.classList.add("wrong");
+        allBtns[q.correct].classList.add("correct");
+
+        document.getElementById("quizMsg").style.color = "#ff6b6b";
+        document.getElementById("quizMsg").innerText = "Sai rồi 😭 thử lại từ đầu nha!";
+
+        setTimeout(() => {
+          showStep("stepPassword");
+          resetAll();
+        }, 1300);
+      }
+    }
+
+    function nextQuestion() {
+      currentQuestion++;
+
+      if (currentQuestion >= quizData.length) {
+        finishQuiz();
+      } else {
+        loadQuestion();
+      }
+    }
+
+    function finishQuiz() {
+      showStep("stepFinish");
+
+      setTimeout(() => {
+        window.location.href = redirectURL;
+      }, 1500);
+    }
+
+    // ==============================
+    // Keyboard Support
+    // ==============================
+
     document.addEventListener("keydown", (e) => {
-      if (e.key >= "0" && e.key <= "9") press(e.key);
-      if (e.key === "Backspace") del();
+      const isPasswordStep = document.getElementById("stepPassword").classList.contains("active");
+
+      if (isPasswordStep) {
+        if (e.key >= "0" && e.key <= "9") press(e.key);
+        if (e.key === "Backspace") del();
+      }
     });
   </script>
 
