--- a/index.html
+++ b/index.html
@@ -60,11 +60,12 @@
     }
 
     .title {
-      font-size: 18px;
+      font-size: 26px;
       font-weight: 700;
-      color: #ffb6d9;
+      color: #ffd1e8;
       margin-bottom: 18px;
       letter-spacing: 0.2px;
+      font-family: cursive;
     }
 
     /* ====== Step hide/show ====== */
