--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       color: #ffd1e8;
       margin-bottom: 18px;
       letter-spacing: 0.2px;
-      font-family: cursive;
+      font-family: "Brush Script MT", cursive;
     }
 
     /* ====== Step hide/show ====== */
