--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
     const correctPassword = "1710";
 
     const redirectURL =
-      "https://panbap.github.io/HeartBeat/lovequiz.html?id=eyJsIjoiIiwibSI6IiIsIm4iOiJCw6J5IGJpIMahaSBhbmggY8OzIMSRaeG7gXUgbXXhu5FuIG7Ds2kgLi4uLi4iLCJvIjoiQW5oIHRoxrDGoW5nIGLDqSBuaGnhu4F1IGzhuq9tIiwiZyI6IkThuqEgYsOpIG3Dum4gbmdoZSEiLCJoIjoiTmdoZSBz4bq9IGPDsyBxdcOgISJ9";
+      "https://panbap.github.io/HeartBeat/lovequiz.html?id=eyJsIjoiIiwibSI6IiIsIm4iOiJCw6J5IGJpIMahaSBhbmggY8OzIMSRaeG7gXUgbXXhu5FuIG7Ds2kuLi4uIiwibyI6IkFuaCB0aMawxqFuZyBiw6kgbmhp4buBdSBs4bqvbSAiLCJnIjoiROG6oSBiw6kgbmdoZSEiLCJoIjoiTmdoZSBz4bq9IGPDsyBxdcOgIG5ow7MhIn0%3D";
 
     // Quiz data (bạn sửa câu hỏi ở đây)
     const quizData = [
@@ -350,7 +350,7 @@
       {
         question: "2) SetLove là ngày nào?",
         answers: ["18/10", "19/08", "18/09", "Bé hong nhớ"],
-        correct: 3
+        correct: 
       },
       {
         question: "3) FirstDate mình đã đi đâu làm gì?",
