--- a/index.html
+++ b/index.html
@@ -431,9 +431,9 @@ Mong rằng sự hạnh phúc của em luôn có sự hiện diện của anh, c
 
     // THÊM MẢNG NÀY ĐỂ SỬA LỖI "images is not defined"
     const images = [
-      "https://i.ibb.co/placeholder1.jpg",  // Thay bằng link ảnh thật 1
-      "https://i.ibb.co/placeholder2.jpg",  // Thay bằng link ảnh thật 2
-      "https://i.ibb.co/placeholder3.jpg",  // Thay bằng link ảnh thật 3
+      "https://i.ibb.co/hun.jpg",  // Thay bằng link ảnh thật 1
+      "https://i.ibb.co/mu.jpg",  // Thay bằng link ảnh thật 2
+      "https://i.ibb.co/photo.jpg",  // Thay bằng link ảnh thật 3
       "https://i.ibb.co/placeholder4.jpg",  // Thay bằng link ảnh thật 4
       "https://i.ibb.co/placeholder5.jpg"   // Thay bằng link ảnh thật 5
     ];
