--- a/index.html
+++ b/index.html
@@ -344,12 +344,14 @@
 <body>
   <div class="particles" id="particles"></div>
   <div class="screen" id="screen">
+
     <!-- STEP PASSWORD -->
     <div class="step active" id="stepPassword">
       <div class="title">Một ngày khó quên</div>
       <div class="dots" id="dots">
         <div class="dot"></div><div class="dot"></div><div class="dot"></div><div class="dot"></div>
       </div>
+
       <div class="keypad" id="keypad">
         <button class="btn" data-num="1">1</button>
         <button class="btn" data-num="2">2</button>
@@ -364,9 +366,11 @@
         <button class="btn" data-num="0">0</button>
         <button class="btn delete" id="delBtn"><i class="fa-solid fa-delete-left"></i></button>
       </div>
+
       <div class="message" id="msg"></div>
       <div class="footer">Gợi ý: Ngày kỷ niệm của chúng ta</div>
     </div>
+
     <!-- STEP QUIZ -->
     <div class="step" id="stepQuiz">
       <div class="title">Quizizz Love</div>
@@ -378,23 +382,30 @@
       </div>
       <div class="footer">Không đúng không cho qua nha bé 💕</div>
     </div>
+
     <!-- STEP LETTER -->
     <div class="step" id="stepLetter">
       <div class="title">Gửi em, cô công chúa của anh 💗</div>
+
       <div class="letter-layout">
         <div class="letter-box">
           <div class="letter-text" id="letterText"></div>
         </div>
+
         <div class="img-box">
-          <img id="loveImg" src="https://i.ibb.co/placeholder1.jpg" alt="Ảnh tụi mình">
+          <!-- CHỈ SỬA ẢNH Ở ĐÂY -->
+          <img id="loveImg" src="hun.jpg" alt="Ảnh tụi mình">
           <div class="photo-hint">Chạm vào ảnh để đổi ảnh nha bé 😘</div>
         </div>
       </div>
+
       <button class="next-btn" id="doneBtn">
         Hoàn thành 💞
       </button>
+
       <div class="footer">Xem hết rồi mới được qua nhaaaa 😝</div>
     </div>
+
     <!-- STEP FINISH -->
     <div class="step" id="stepFinish">
       <div class="title">Giỏi lắm bây bi</div>
@@ -403,15 +414,19 @@
       </div>
       <div class="footer">Chờ anh một tẹo nhó 😍</div>
     </div>
+
   </div>
+
   <!-- AUDIO -->
   <audio id="bgMusic" loop preload="auto">
     <source src="Khongthoigian.mp3" type="audio/mpeg">
     Trình duyệt của bạn không hỗ trợ audio.
   </audio>
+
   <button id="musicBtn" title="Phát / Dừng nhạc">
     <i class="fas fa-music"></i>
   </button>
+
   <script>
     const PASS = "1806";
     const REDIRECT = "https://panbap.github.io/HeartBeat/lovequiz.html?id=eyJsIjoiIiwibSI6IiIsIm4iOiJCw6J5IGJpIMahaSBhbmggY8OzIMSRaeG7gXUgbXXhu5FuIG7Ds2kuLi4uIiwibyI6IkFuaCB0aMawxqFuZyBiw6kgbmhp4buBdSBs4bqvbSAiLCJnIjoiROG6oSBiw6kgbmdoZSEiLCJoIjoiTmdoZSBz4bq9IGPDsyBxdcOgIG5ow7MhIn0%3D";
@@ -422,20 +437,22 @@
       { q: "4) Em thấy mình là người như thế nào?", a: ["Quá xinh","Quá tâm lý","Yêu Dương Minh nhất","Bé lấy hết"], c:3 }
     ];
 
-    // LỜI NHẮN NHỦ (đã có)
+    // LỜI NHẮN NHỦ (giữ nguyên)
     const loveMessage = `Anh là một thằng khùng điên dẫu cứ ôm em trong lòng rồi mà đã nhớ em những ngày sắp tới.
 Yêu anh thì đừng hỏi anh tình yêu màu gì rồi em sẽ thấy nó trong suốt quãng thời gian em bên anh thôi.
 Biết là đường đi phía trước sẽ còn rất dài và nhiều sự khó khăn nhưng sẽ qua thôi nếu chúng mình đi cùng nhau.
 Dù cho cuộc đời có dạy anh biết bao điều đi nữa, anh sẽ không quên được một điều, đó là yêu em.
 Mong rằng sự hạnh phúc của em luôn có sự hiện diện của anh, của đôi ta nhé hỡi cô công chúa của anh 💗`;
 
-    // THÊM MẢNG NÀY ĐỂ SỬA LỖI "images is not defined"
+    /* ==========================
+       CHỈ SỬA ẢNH Ở ĐÂY
+       ========================== */
     const images = [
-      "https://i.ibb.co/hun.jpg",  // Thay bằng link ảnh thật 1
-      "https://i.ibb.co/mu.jpg",  // Thay bằng link ảnh thật 2
-      "https://i.ibb.co/photo.jpg",  // Thay bằng link ảnh thật 3
-      "https://i.ibb.co/placeholder4.jpg",  // Thay bằng link ảnh thật 4
-      "https://i.ibb.co/placeholder5.jpg"   // Thay bằng link ảnh thật 5
+      "hun.jpg",
+      "photo.jpg",
+      "mu.jpg",
+      "hun.jpg",
+      "photo.jpg"
     ];
 
     let imgIndex = 0;
@@ -573,6 +590,7 @@ Mong rằng sự hạnh phúc của em luôn có sự hiện diện của anh, c
     // HIỆU ỨNG GÕ TỪ TỪ
     let typingIndex = 0;
     let typingDone = false;
+
     function startTypingLetter() {
       typingIndex = 0;
       typingDone = false;
@@ -580,6 +598,7 @@ Mong rằng sự hạnh phúc của em luôn có sự hiện diện của anh, c
       el.doneBtn.style.display = "none";
       typeOneChar();
     }
+
     function typeOneChar() {
       if (typingIndex < loveMessage.length) {
         const currentText = loveMessage.slice(0, typingIndex + 1);
