--- a/index.html
+++ b/index.html
@@ -104,8 +104,22 @@
       80% { opacity: 0.8; }
       100% { opacity: 0; transform: translateY(120vh) scale(0.8) rotate(360deg); }
     }
-    .screen {
+    /*.screen {
       width: min(92vw, 900px);
+      max-height: 95dvh;
+      overflow-y: auto;
+      padding: clamp(20px, 5vw, 32px) clamp(16px, 4vw, 28px);
+      border-radius: 24px;
+      background: rgba(35,10,45,0.78);
+      backdrop-filter: blur(20px);
+      border: 1px solid rgba(255,255,255,0.1);
+      box-shadow: 0 10px 40px rgba(0,0,0,0.6);
+      text-align: center;
+      position: relative;
+      z-index: 1;
+    }*/
+    .screen {
+      width: min(90vw, 360px);
       max-height: 95dvh;
       overflow-y: auto;
       padding: clamp(20px, 5vw, 32px) clamp(16px, 4vw, 28px);
