--- a/index.html
+++ b/index.html
@@ -442,18 +442,16 @@
     const PASS = "1806";
     const REDIRECT = "https://panbap.github.io/HeartBeat/lovequiz.html?id=eyJsIjoiIiwibSI6IiIsIm4iOiJCw6J5IGJpIMahaSBhbmggY8OzIMSRaeG7gXUgbXXhu5FuIG7Ds2kuLi4uIiwibyI6IkFuaCB0aMawxqFuZyBiw6kgbmhp4buBdSBs4bqvbSAiLCJnIjoiROG6oSBiw6kgbmdoZSEiLCJoIjoiTmdoZSBz4bq9IGPDsyBxdcOgIG5ow7MhIn0%3D";
     const quiz = [
-      { q: "1) Tin nhắn đầu tiên của chúng mình là gì?", a: ["Helu Bèo","Hellu Bèo","Dô nghiện","Helu Tiêu😒"], c:0 },
-      /*{ q: "2) Anh sinh ngày bao nhiêu và cung gì?", a: ["08/03 cung Thiên Bình","07/03 cung Song Ngư","11/07 cung Cự Giải","Bé hong nhớ"], c:1 },
-      { q: "3) SetLove là ngày nào?", a: ["18/10","19/08","18/09","Bé hong nhớ"], c:2 },
-      { q: "4) Điều gì em thấy anh tệ nhất?", a: ["Hay ghen","Hay khóc","Không chiều chuộng em","On core roét"], c:3 },
-      { q: "5) Em nghĩ điều gì anh lại chọn bên em?", a: ["Sự đồng cảm","Vì xinh","Sự ngây ngô","Em yêu anh"], c:0 },
-      { q: "6) Khoảnh khắc kỉ niệm của hai đứa khiến em nhớ nhất?", a: ["Em nói anh nghe nè"], c:0 },
-      { q: "7) Lý do tại sao em lại chọn anh?", a: ["...."], c:0 },
-      { q: "8) FirstDate mình đã đi đâu làm gì?", a: ["Đi cà phơ","Đi tô tượng","Hun nhau","Dạ tất cả đều đúng ạ"], c:3 },
-      { q: "9) Em thấy mình là người như thế nào?", a: ["Quá xinh","Quá tâm lý","Yêu Dương Minh nhất","Bé lấy hết"], c:3 },
-      { q: "10) Anh muốn nói là?", a: ["ANH THƯƠNG EM LẮM DUYÊN"], c:0 }*/
-      
-    
+      { q: "1) Tin nhắn mở màn định mệnh của tụi mình là gì nè💌", a: ["Helu Bèo","Hellu Bèo","Dô nghiện","Helu Tiêu😒"], c:0 },
+      { q: "2) Anh sinh ngày mấy và thuộc cung hoàng đạo nào?", a: ["07/03 cung Thiên Bình","07/03 cung Song Ngư","11/07 cung Cự Giải","Bé hong nhớ"], c:1 },
+      { q: "3) Ngày SetLove của tụi mình là ngày nào? (Sai là anh buồn nguyên kiếp 😭)", a: ["18/10","19/08","18/09","Bé hong nhớ"], c:2 },
+      { q: "4) Theo em, điều anh “tệ” nhất là gì?", a: ["Hay ghen","Hay khóc","Không chiều chuộng em","On core roét"], c:3 },
+      { q: "5) Trong muôn vàn lý do, em biết vì sao anh lại muổn ở bên em không? 🌷", a: ["Sự đồng cảm","Vì xinh","Sự ngây ngô","Em yêu anh"], c:0 },
+      { q: "6) Khoảnh khắc nào của tụi mình khiến em nhớ nhất? 🥺💞", a: ["Em nói anh nghe nè"], c:0 },
+      { q: "7) Lý do em chọn anh là gì… (không được trả lời cho có nha bé 😤💗)", a: ["...."], c:0 },
+      { q: "8) Buổi FirstDate huyền thoại: tụi mình đã đi đâu và làm gì? 😳💘", a: ["Đi cà phơ","Đi tô tượng","Hun nhau","Dạ tất cả đều đúng ạ"], c:3 },
+      { q: "9) Em thấy bản thân em là người như thế nào? (câu này dễ mà sai là anh dỗi 😌)", a: ["Quá xinh","Quá tâm lý","Yêu Dương Minh nhất","Bé lấy hết"], c:3 },
+      { q: "10) Cuối cùng… anh muốn nói với em điều gì đây? 💖", a: ["ANH THƯƠNG EM LẮM DUYÊN"], c:0 }
     ];
 
     // LỜI NHẮN NHỦ (giữ nguyên)
