--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
       { q: "7) Lý do em chọn anh là gì… (không được trả lời cho có nha bé 😤💗)", a: ["...."], c:0 },
       { q: "8) Buổi FirstDate huyền thoại: tụi mình đã đi đâu và làm gì? 😳💘", a: ["Đi cà phơ","Đi tô tượng","Hun nhau","Dạ tất cả đều đúng ạ"], c:3 },
       { q: "9) Em thấy bản thân em là người như thế nào? (câu này dễ mà sai là anh dỗi 😌)", a: ["Quá xinh","Quá tâm lý","Yêu Dương Minh nhất","Bé lấy hết"], c:3 },
-      { q: "10) Cuối cùng… anh muốn nói với em điều gì đây? 💖", a: ["ANH THƯƠNG EM LẮM DUYÊN"], c:0 }
+      { q: "10) Cuối cùng… anh muốn nói với em điều này? 💖", a: ["ATEM"], c:0 }
     ];
 
     // LỜI NHẮN NHỦ (giữ nguyên)
